--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <img
           src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
-          />
+          alt="Columbia Logo"
+        >
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         <span>
           COLUMBIARECORDS.COM
@@ -50,7 +51,8 @@
         <br>
         <img
           src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
-          />
+          alt="Sony Logo"
+        >
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
